methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:6: error: not found: value baisserBrosse
  baisserBrosse()
  ^